[tool.poetry]
name = "tweet_cleaner"
version = "0.1.0"
description = ""
authors = ["Justin Mitchell"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
tweepy = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
